--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,14 +24,14 @@ steps:
   
 substitutions:
     #GCP Specific configuration. Please DON'T change anything
-    _PROJECT: learn-gcp-with-mahesh
-    _ZONE: asia-south1-a
-    _GKE_CLUSTER: learn-gcp-with-mahesh-gke-cluster
+    _PROJECT: git bash 1
+    _ZONE: us-central1-a
+    _GKE_CLUSTER: cloudbuildcluster
     
     #Repository Specific configuration. DevOps can change this settings
     _DEPLOYMENTNAME: hello-world-service
     _CONTAINERNAME: hello-world-service    
-    _REPO_NAME: cicd-service
+    _REPO_NAME: cloudbuild-cicd-02
     
     # Developers ONLY change
     _VERSION: v1.0
