--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,11 +3,10 @@ steps:
 - name: 'gcr.io/cloud-builders/git'
   args: ['clone','https://source.developers.google.com/p/${_PROJECT}/r/${_REPO_NAME}']
 # configurations
-steps:
 - name: 'bash'
   args: ['echo', 'Hello world!']
-logsBucket: 'git_bash/terraform'
-serviceAccount: 'git-bash@git-jbash-123.iam.gserviceaccount.com'
+  logsBucket: 'gs://git_bash/terraform'
+  serviceAccount: 'git-bash@git-jbash-123.iam.gserviceaccount.com'
 options:
   logging: GCS_ONLY
 #Build the image 
